# AcerBattery

./: .ansible-lint  .bandit.baseline  .coveragerc  .gitignore  99-acer-wmi-battery  CHANGELOG.md  README.md  acer-wmi-battery.service  galaxy.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  site.yml
collections/ansible_collections/yaconsult/acer_battery/: .bandit.baseline  .gitignore  .mypy_cache  .pytest_cache  .venv  README.md  galaxy.yml  inventory  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  roles  site.yml  tests
examples/: README.md  battery_full_status.sh  battery_history_logger.sh  battery_temperature.sh  calibration_mode.sh  charge_full_then_limit_and_shutdown.sh  charge_limit_off.sh  charge_limit_on.sh  find_calibration_mode_node.sh  find_health_mode_node.sh  find_temperature_node.sh  watch_battery_status.sh
roles/acer_battery/defaults/: main.yml
roles/acer_battery/handlers/: main.yml
roles/acer_battery/tasks/: generate-mok-keys.yml  main.yml
roles/acer_battery/templates/: ANSIBLE-MANAGED.txt.j2  Makefile.j2  acer-wmi-battery.service.j2  dkms.conf.j2  kernel-install.j2  kernel-postinst.j2  modules-load.conf.j2
roles/acer_battery/templates/scripts/: check-status.sh.j2  sign-modules.sh.j2  verify-module.sh.j2
tests/: ansible.cfg  test.yml  test_dkms_config.py  test_examples_scripts.py  test_module_installation.py  test_role.py  test_secure_boot.py
